--- a/organogram/src/OrgChart.css
+++ b/organogram/src/OrgChart.css
@@ -1,26 +1,26 @@
 .orgNodeChildGroup .node {
   border: solid 1px #000000;
   display: inline-block;
-  margin: 5px;
+  /* margin: 5px; */
   padding: 2px;
   width: 100px;
   /* display: flex;
 flex-direction: row; */
 }
 .orgChart {
-  margin: 2px;
-  border: solid 1px #ccc;
+  /* margin: 2px; */
+  /* border: solid 1px #ccc; */
 }
 .orgChartRow {
-  margin: 2px;
-  border: solid 1px #aaa;
+  /* margin: 2px; */
+  /* border: solid 1px #aaa; */
 }
 /* .nodeRow{
 
 } */
 .orgNodeChildGroup {
-  border: solid lightblue;
-  margin: 2px;
+  /* border: solid lightblue; */
+  /* margin: 2px; */
 }
 
 .orgNodeChildGroup .nodeCell {
@@ -36,15 +36,15 @@ flex-direction: row; */
   width: 50%;
   border-right: 2px solid #000;
 }
-.nodeGroupLineRight {
-  /* height: 25px;
-  width: 50%; */
+/* .nodeGroupLineRight {
+  
   border-top: 2px solid #000;
-}
+} */
 .nodeLineBorderTop {
   /* height: 25px;
   width: 50%; */
   /* width: 50px; */
+
   border-top: 2px solid #000;
 }
 
@@ -54,7 +54,7 @@ td.nodeLine {
 
 table.nodeLineTable {
   width: 100%;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
 }
 
 table td.nodeCell {
@@ -68,5 +68,5 @@ table td.nodeCell {
   padding: 0;
 }
 
-.nodeGroupCellLines {
-}
+/* .nodeGroupCellLines {
+} */
